Add instructions for running the jar